--- a/DiskUtils/DiskUtils.vcxproj
+++ b/DiskUtils/DiskUtils.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{98644531-51C9-4F00-B08C-ABA1D3483547}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>DiskDump</RootNamespace>
+    <RootNamespace>DiskUtils</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
     <ProjectName>DiskUtils</ProjectName>
   </PropertyGroup>
